--- a/index.html
+++ b/index.html
@@ -6,8 +6,22 @@
     <title>Ask Her Out</title>
 
     <link rel="stylesheet" href="./style.css" />
+    <style>
+      /* Style to position the audio player */
+      .audio-player {
+        position: fixed;
+        top: 10px;
+        right: 10px;
+        z-index: 1000; /* Ensures it stays on top */
+      }
+    </style>
   </head>
   <body>
+    <!-- Background Music -->
+    <audio class="audio-player" src="C:\Users\sathy\OneDrive\Desktop\Impress crush\Chellakuttiye.mp3" autoplay controls>
+      <p>If you are reading this, it is because your browser does not support the audio element.</p>
+    </audio>
+
     <div class="container">
       <div
         class="tenor-gif-embed"
@@ -27,7 +41,6 @@
       ></script>
       <h1>DO you love me? 🤗</h1>
       
-
       <div class="btn">
         <a href="yes.html">Yes</a>
         <a href="no1.html">No</a>
